--- a/app/src/main/res/layout/item_todo.xml
+++ b/app/src/main/res/layout/item_todo.xml
@@ -5,7 +5,7 @@
     android:layout_gravity="center_vertical">
 
     <TextView
-        android:id="@+id/task_title"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:text="Done?" />
+        android:text="Done?"
+        android:onClick="deleteTask"/>
 
 </RelativeLayout>
